# resources

./: .gitignore  LICENSE  README.md  setup.cfg
bed_files/: NOMADS-IR_amplicons.bed  NOMADS16_amplicons.bed  NOMADS8_amplicons.bed  NOMADS_species_id.bed  nomads8.amplicons.bed  nomadsMVP.amplicons.bed
bed_files/bed_files/: MVP_amplicons.bed  NOMADS8_amplicons.bed
beds/: nomads16.amplicons.bed
commodities/: Commodities and Equipment List.xlsx  NOMADS_Primers.xlsx
environments/: nomadic_windows.yml  nomads.yml  run.yml
functions/: compute_prevalence.py  upsetplot_fig.py
info/: Commodities.xlsx  Equipment.xlsx  Install_Insync.docx  Install_Linux_from_Windows.docx  NOMADS_Checklist.xlsx
misc/: Guide to installing NOMADS tools on Windows.docx
notebooks/: example_config.yaml
notebooks/functions/: config.py  upsetplot_fig.py
notebooks/mutations/: 1_Prevalence.ipynb  Prevalence.ipynb  WHO_compendium_list.yml
notebooks/raw_sequencing_data/: Sequencing_throughput.ipynb
scripts/: Update_repos.sh  update_NOMADS_repos.py  update_repos.sh
src/resources/: NOMADS_repos.yml  resources.py
src/resources/install/: commands.py
src/resources/lib/: exceptions.py  general.py  logging.py
src/resources/mklinks/: mklinks.py
src/resources/nomadic/: nomadic.py
src/resources/update/: commands.py
