[metadata]
name = resources
version = 0.1.0b0
description = CLI for managing NOMADS tools installation and maintenance
author = Daniel J Bridges
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    resources
install_requires =
    click
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
	resources = resources.resources:cli

[flake8]
max-line-length = 88
